# hermeto

./: .containerignore  .gitignore  .markdownlint-cli2.yaml  404.html  AGENTS.md  ARCH_LINUX_PR_DESCRIPTION.md  CLAUDE.md  CONTRIBUTING.md  CPP  CPP1  Dockerfile  Dockerfile.konflux  README.md  collect.txt  index.html  mkdocs.yml  noxfile.py  out.txt  pyproject.toml  renovate.json  requirements-build.txt  requirements-extras.txt  requirements.txt  rpms.lock.in  rpms.lock.yaml  test_out.txt  versions.json
.claude/: scripts
.gemini/: styleguide.md
.github/workflows/: actionlint.yaml  (+9 more)
.konflux/: Dockerfile.konflux  rpms.in.yaml  rpms.lock.yaml
.tekton/: hermeto-pull-request.yaml  hermeto-push.yaml  hermeto-upstream-pull-request.yaml  hermeto-upstream-push.yaml
0.51.0/: 404.html  index.html
0.52.0/: index.html
0.57.0/: index.html
agent-notes/: patch-locator-comparison.md
bundler/: index.html
cargo/: index.html
dev/: 404.html  index.html
docs/: bundler.md  configuration.md  dvc.md  exit-codes.md  generic.md  gomod.md  huggingface.md  npm.md  pip.md  sbom.md  templeos.md  usage.md  uv-lock.md  uv.md  yarn.md  yarn_classic.md
generic/: index.html
gomod/: index.html
hermeto/core/package_managers/templeos/: Cargo.toml  __init__.py  main.py
hermeto/core/package_managers/templeos/src/: main.rs
npm/: index.html
pip/: index.html
rpm/: index.html
search/: search_index.json
tests/: conftest.py  test_perfection.py
toolbox/: Containerfile.toolbox  host-runner.sh  pudb.cfg
usage/: index.html
yarn/: index.html
yarn_classic/: index.html
(+360 files in other folders)
