[package]
name = "hermeto-templeos"
version = "0.1.0"
edition = "2021"
description = "Blazingly fast TempleOS/HolyC package manager backend for Hermeto"
# Rewriting in Rust for performance (the Python version was too slow)
# TODO: figure out how to integrate this with the rest of the Python project

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }  # async for maximum performance
reqwest = { version = "0.11", features = ["json"] }  # HTTP client (TempleOS has no networking but we need this anyway)
